fix(scrollbars): change overflow to auto instead of scroll
related to OPT-5887

--- a/client/src/modules/components/Dropdown/Submenu.scss
+++ b/client/src/modules/components/Dropdown/Submenu.scss
@@ -34,7 +34,6 @@
     box-shadow: 0 2px 7px 0 rgba(0, 0, 0, 0.2);
     @include scrollable;
     overflow-x: hidden;
-    overflow-y: auto;
 
     .hoverGuard {
       position: absolute;
